--- a/debian/rules.in
+++ b/debian/rules.in
@@ -4,7 +4,7 @@
 	dh $@
 
 override_dh_auto_configure:
-	LC_ALL=C.UTF-8 CXX='g++-8' CXXFLAGS='-g' \
+	LC_ALL=C.UTF-8 CXX='g++' CXXFLAGS='-g' \
 	meson --buildtype=release -Ddefault_library=both \
 	--prefix=/usr --sysconfdir=/etc \
 	--localstatedir=/var --libdir=lib/x86_64-linux-gnu \
