--- a/meson.build
+++ b/meson.build
@@ -3,12 +3,20 @@ project(
   'cpp',
   version: '0.1.0',
   license: 'MIT',
-  meson_version: '>= 0.53.2',
+  meson_version: '>= 0.61.2',
+  subproject_dir: 'subprojects',
   default_options: [
     'cpp_std=c++17',
     'warning_level=3',
     'werror=true'
   ])
+
+compiler_id = meson.get_compiler('cpp').get_id()
+if compiler_id != 'gcc' and compiler_id != 'clang'
+  msg = 'compiler `' + compiler_id + '` is not supported; '
+  msg += 'please use either `g++` or `clang++`'
+  error(msg)
+endif
 
 cpp_args = ['-Wconversion']
 if get_option('buildtype') == 'release'
@@ -20,7 +28,7 @@ if get_option('b_asneeded') == false
   link_args += ['-Wl,--no-as-needed']
 endif
 
-# These compiler and link flags ensure source code hardening
+# These compiler and linker options ensure source code hardening
 # required by debian packaging.
 cpp_hardening_args = [
   '-fstack-protector-strong',
@@ -29,8 +37,7 @@ cpp_hardening_args = [
   '-Werror=format-security',
   '-D_FORTIFY_SOURCE=2'
 ]
-compiler = meson.get_compiler('cpp')
-if compiler.get_id() == 'gcc'
+if compiler_id == 'gcc'
   cpp_hardening_args += ['-fstack-clash-protection']
 endif
 link_hardeining_args = [
